Fix to pass test

--- a/force-app/main/default/classes/AncestryHelper.cls
+++ b/force-app/main/default/classes/AncestryHelper.cls
@@ -2,30 +2,42 @@
  * @description       :
  * @author            : nigel.hughes@sage.com
  * @group             :
- * @last modified on  : 02-16-2021
- * @last modified by  : Nigel Hughes
+ * @last modified on  : 25-02-2021
+ * @last modified by  : nigel.hughes@sage.com
  * Modifications Log
  * Ver   Date         Author             Modification
  * 1.0   14-12-2020   nigel.hughes@sage.com   Initial Version
  **/
 public with sharing class AncestryHelper {
 	public static List<Id> getAncestors(Id descendant) {
-		List<Id> ancestors = new List<Id>();
+		Set<Id> ancestors = new Set<Id>();
 		Ancestry__c person = [
 			SELECT Id, Name, First_Name__c, Family_Name__c, Parent__c
 			FROM Ancestry__c
 			WHERE Id = :descendant
 		];
 
+		Map<Id, Ancestry__c> m = new Map<Id, Ancestry__c>(
+			[SELECT Id, Parent__c FROM Ancestry__c]
+		);
 		while (person.Parent__c != null) {
-			ancestors.add(person.Parent__c);
-			person = [
-				SELECT Parent__c
-				FROM Ancestry__c
-				WHERE Id = :person.Parent__c
-			];
+			Boolean result = ancestors.add(person.Parent__c);
+			if (result) {
+				person = m.get(person.Parent__c);
+			} else {
+				break;
+			}
 		}
+		return new List<Id>(ancestors);
+	}
 
-		return ancestors;
+	@AuraEnabled(cacheable=true)
+	public static List<Ancestry__c> getDescendents(Id parentId) {
+		List<Ancestry__c> children = [
+			SELECT Id, Name, First_Name__c, Family_Name__c
+			FROM Ancestry__c
+			WHERE Parent__r.Ancestry__c = :parentId OR Parent__c = :parentId
+		];
+		return children;
 	}
 }
