--- a/force-app/main/default/classes/AncestryHelper.cls
+++ b/force-app/main/default/classes/AncestryHelper.cls
@@ -2,7 +2,7 @@
  * @description       :
  * @author            : nigel.hughes@sage.com
  * @group             :
- * @last modified on  : 25-02-2021
+ * @last modified on  : 26-02-2021
  * @last modified by  : nigel.hughes@sage.com
  * Modifications Log
  * Ver   Date         Author             Modification
@@ -12,17 +12,24 @@ public with sharing class AncestryHelper {
 	public static List<Id> getAncestors(Id descendant) {
 		Set<Id> ancestors = new Set<Id>();
 		Ancestry__c person = [
-			SELECT Id, Name, First_Name__c, Family_Name__c, Parent__c
+			SELECT
+				Id,
+				Name,
+				First_Name__c,
+				Family_Name__c,
+				Parent__c,
+				Parent__r.Ancestry__c
 			FROM Ancestry__c
 			WHERE Id = :descendant
 		];
 
 		Map<Id, Ancestry__c> m = new Map<Id, Ancestry__c>(
-			[SELECT Id, Parent__c FROM Ancestry__c]
+			[SELECT Id, Parent__c, Parent__r.Ancestry__c FROM Ancestry__c]
 		);
+
 		while (person.Parent__c != null) {
-			Boolean result = ancestors.add(person.Parent__c);
-			if (result) {
+			ancestors.add(person.Parent__r.Ancestry__c);
+			if (ancestors.add(person.Parent__c)) {
 				person = m.get(person.Parent__c);
 			} else {
 				break;
